-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-05-04	pwessel
	* gmt_plot.c:		Fix treatment of text and font attributes in custom symbols
	* gmt_support.c:	---"---.  This addresses issue # 553.

2014-04-24	pwessel
	* grdcut.c:		Needed to extend -Z to also consider -Zr so that -Zn
				would return a NaN-free subset.

2014-04-02	pwessel
	* spotter/backtracker.c:	Merge -e with -E to simplify operations and to
				disallow lower-case options other than for GMT common options.
				Backwards compatible for now but this will cease in 5.2.x
	* spotter/grdrotator.c:	---"---

2014-04-05	pwessel
	* xyz2grd.c:		Replaced -N<nodata> with common option -di<nodata>, but
				left -N for backwards compatibility under 4.
	* grd2xyz.c:		Replaced -N[i]<nodata> with common option -d[i]<nodata>, but
				left -N for backwards compatibility under 4.

2014-04-04	pwessel
	* psbasemap.c:		Added new option -A[file] which instead of plotting a map
				will write the coordinates of the plot domain outline to
				the given file (or stdout).

2014-04-03	pwessel
	* gmt_init.c:		Added new common GMT option -d[i|o\<nodata>], which can be
				used anywhere to convert users <nodata> values to NaN, and to do
				the reverse on output.

2014-03-26	remko
	* ps2raster.c:		Bug fix: -C should also apply when computing BoundingBox.

2014-03-03	pwessel
	* pslegend.c:		The flush_paragraph was not reset to false before 2nd loop,
				causing the text (T) option to fail if it was the first item.

-----------------------------------------------------------------------------------------
2014-03-01	pwessel
	GMT 5.1.1 finalized and released.
-----------------------------------------------------------------------------------------
2014-02-27	remko
	* ps2raster.c:		Fix issue with psimage-included EPS files (issue #521)

2014-02-25	pwessel